Actualizacion de tablas y datos

--- a/index.html
+++ b/index.html
@@ -4,59 +4,86 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style_index.css">
+    <link rel="shortcut icon" href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
+        type="image/x-icon">
     <title>Store Futbol</title>
 </head>
 
 <body>
-    <h1>WELCOME STORE SOCCER ⚽</h1>
-    <a href="./pages/user.html"> Page User 👤 </a>
-    <br />
-    <a href="./pages/login.html">LOGIN</a>
+    <nav>
+        <h1>BIENVENIDOS A LA TIENDA MUNDIAL DE FUTBOL SOCCER ⚽</h1>
+        <a href="./pages/login.html">Log In</a>
+        <br>
+        <a href="./pages/signUp.html">Sign Up</a>
+    </nav>
     <hr />
     <img src="./images/balls.jpg" alt="" width="600px" />
     <br>
-    <p>dasdasdasd</p>
+
+
+    <p>FUTBOL SOCCER</p>
     <hr>
-   
-    
-    <h2>PORQUE DEBES DE COMPRAR SHIRTS DE FUTBOL</h2>
-    <ul>
-        <li>PORQUE SI</li>
-        <li>YEAH</li>
-        <li>NOMAS</li>
-    </ul>
+
+
+    <h2>PLAYERAS</h2>
     <!-- TABLAS -->
     <table border="2px">
         <tr>
-            <th>Foto</th>
-            <th>Product</th>
-            <th>Price</th>
-            <th>Buy</th>
+            <th>TALLA</th>
+            <th>MARCA</th>
+            <th>COLOR</th>
+            <th>MATERIAL</th>
+            <th>PRECIO</th>
+            <th>COMPRAR</th>
         </tr>
         <tr>
-            <td>😎</td>
-            <td>RUSIA 2018</td>
-            <td>$400</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
-        </tr>
-        <tr>
-            <td>😪</td>
-            <td>Brazil 2014</td>
-            <td>$200</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
-        </tr>
-        <tr>
-            <td>😂</td>
-            <td>Sudafrica 2010</td>
+            <td>CH</td>
+            <td>NIKE</td>
+            <td style="color: rgb(90, 90, 243);">Blue</td>
+            <td>LICRA</td>
             <td>$100</td>
             <td>
                 <button>AÑADIR A CARRITO</button>
             </td>
         </tr>
+        <tr>
+            <td>M</td>
+            <td>ADIDAS</td>
+            <td style="color: black;">Black</td>
+            <td>ALGODÓN</td>
+            <td>$110</td>
+            <td>
+                <button>AÑADIR A CARRITO</button>
+            </td>
+        </tr>
+        <tr>
+            <td>G</td>
+            <td>PUMA</td>
+            <td style="color:rgb(246, 0, 0)">Red</td>
+            <td>POLIÉSTER</td>
+            <td>$150</td>
+            <td>
+                <button>AÑADIR A CARRITO</button>
+            </td>
+        </tr>
+        <td>EG</td>
+            <td>NEW BALANCE</td>
+            <td style="color:rgb(55, 149, 66)">Green</td>
+            <td>NYLON</td>
+            <td>$200</td>
+            <td>
+                <button>AÑADIR A CARRITO</button>
+            </td>
     </table>
+    <div class="galery_playeras">
+        <figure>
+            <img src="https://martimx.vtexassets.com/arquivos/ids/1253126-800-800?v=638476699306800000&width=800&height=800&aspect=true" alt="Playera Nike" width="200px">
+            <img src="" alt="">
+        </figure>
+        
+    </div>
+
 </body>
+
 </html>
