Se agregaron listas

--- a/index.html
+++ b/index.html
@@ -1,89 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/style_index.css">
-    <link rel="shortcut icon" href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
-        type="image/x-icon">
+    <link rel="stylesheet" href="styles/style_index.css" />
+    <link
+      rel="shortcut icon"
+      href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
+      type="image/x-icon"
+    />
     <title>Store Futbol</title>
-</head>
+  </head>
 
-<body>
-    <nav>
+  <body>
+    <main>
+      <nav>
         <h1>BIENVENIDOS A LA TIENDA MUNDIAL DE FUTBOL SOCCER ⚽</h1>
         <a href="./pages/login.html">Log In</a>
-        <br>
+        <br />
         <a href="./pages/signUp.html">Sign Up</a>
-    </nav>
-    <hr />
-    <img src="./images/balls.jpg" alt="" width="600px" />
-    <br>
+      </nav>
+      <hr />
+      <img src="./images/balls.jpg" alt="" width="600px" />
+      <br />
 
+      <p>FUTBOL SOCCER</p>
+      <hr />
 
-    <p>FUTBOL SOCCER</p>
-    <hr>
-
-
-    <h2>PLAYERAS</h2>
-    <!-- TABLAS -->
-    <table border="2px">
+      <h2>PLAYERAS</h2>
+      <!-- TABLAS -->
+      <table border="2px">
         <tr>
-            <th>TALLA</th>
-            <th>MARCA</th>
-            <th>COLOR</th>
-            <th>MATERIAL</th>
-            <th>PRECIO</th>
-            <th>COMPRAR</th>
+          <th>TALLA</th>
+          <th>MARCA</th>
+          <th>COLOR</th>
+          <th>MATERIAL</th>
+          <th>PRECIO</th>
+          <th>COMPRAR</th>
         </tr>
         <tr>
-            <td>CH</td>
-            <td>NIKE</td>
-            <td style="color: rgb(90, 90, 243);">Blue</td>
-            <td>LICRA</td>
-            <td>$100</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
+          <td>CH</td>
+          <td>NIKE</td>
+          <td style="color: rgb(90, 90, 243)">Blue</td>
+          <td>LICRA</td>
+          <td>$100</td>
+          <td>
+            <button>AÑADIR A CARRITO</button>
+          </td>
         </tr>
         <tr>
-            <td>M</td>
-            <td>ADIDAS</td>
-            <td style="color: black;">Black</td>
-            <td>ALGODÓN</td>
-            <td>$110</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
+          <td>M</td>
+          <td>ADIDAS</td>
+          <td style="color: black">Black</td>
+          <td>ALGODÓN</td>
+          <td>$110</td>
+          <td>
+            <button>AÑADIR A CARRITO</button>
+          </td>
         </tr>
         <tr>
-            <td>G</td>
-            <td>PUMA</td>
-            <td style="color:rgb(246, 0, 0)">Red</td>
-            <td>POLIÉSTER</td>
-            <td>$150</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
+          <td>G</td>
+          <td>PUMA</td>
+          <td style="color: rgb(246, 0, 0)">Red</td>
+          <td>POLIÉSTER</td>
+          <td>$150</td>
+          <td>
+            <button>AÑADIR A CARRITO</button>
+          </td>
         </tr>
         <td>EG</td>
-            <td>NEW BALANCE</td>
-            <td style="color:rgb(55, 149, 66)">Green</td>
-            <td>NYLON</td>
-            <td>$200</td>
-            <td>
-                <button>AÑADIR A CARRITO</button>
-            </td>
-    </table>
-    <div class="galery_playeras">
+        <td>NEW BALANCE</td>
+        <td style="color: rgb(55, 149, 66)">Green</td>
+        <td>NYLON</td>
+        <td>$200</td>
+        <td>
+          <button>AÑADIR A CARRITO</button>
+        </td>
+      </table>
+      <div class="galery_playeras">
         <figure>
-            <img src="https://martimx.vtexassets.com/arquivos/ids/1253126-800-800?v=638476699306800000&width=800&height=800&aspect=true" alt="Playera Nike" width="200px">
-            <img src="" alt="">
+          <img
+            src="https://martimx.vtexassets.com/arquivos/ids/1253126-800-800?v=638476699306800000&width=800&height=800&aspect=true"
+            alt="Playera Nike"
+            width="200px"
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn8jDtJMN32quhG5UHupvCyhgQ_b383BFrGw&s"
+            alt="Playera Adidas"
+            width="220px"
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYpV5KUSTU34ZhJuxUYR9PM7nstOmqdV5R8LCnLGbgxjZjUCzcsM1fPAY6EAWFhe5W_-M&usqp=CAU"
+            alt="Playera Puma"
+            width="150px"
+          />
+          <img
+            src="https://m.media-amazon.com/images/I/31aFsc-jJnL._AC_.jpg"
+            alt="Playera NB"
+            width="150px"
+          />
         </figure>
-        
-    </div>
-
-</body>
-
+      </div>
+      <hr />
+      <h2>TAQUETES - TENIS</h2>
+      <table border="2px">
+        <tr>
+          <th>TALLA</th>
+          <th>MARCA</th>
+          <th>COLOR</th>
+          <th>PRECIO</th>
+          <th>COMPRAR</th>
+        </tr>
+        <tr>
+          <td>20-25cm</td>
+          <td>NIKE</td>
+          <td style="color: rgb(249, 141, 10)">Orange</td>
+          <td>$650</td>
+          <td>
+            <button>AÑADIR A CARRITO</button>
+          </td>
+        </tr>
+        <tr>
+          <td>26-30cm</td>
+          <td>ADIDAS</td>
+          <td style="color: rgb(225, 0, 255)">Pink</td>
+          <td>$650</td>
+          <td>
+            <button>AÑADIR A CARRITO</button>
+          </td>
+        </tr>
+      </table>
+      <div class="galery_tenis">
+        <figure>
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbBsLszfHEE3gYNaP87AQMgiHAm1y21adutw&s"
+            alt="Tenis Nike"
+            width="300px"
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1QaHoApI1FR7Uxj04x_UtnR_MoaabjiL29w&s"
+            alt="Tenis a"
+            width="200px"
+          />
+        </figure>
+      </div>
+      <article>
+        <header><h3>BALONES MUNDIALISTAS</h3></header>
+        <figure>
+          <img
+            src="https://site.innovasport.com/cx/mundial/balon/Timeline/15-Todos/is-desk-lnd-timeline15-balonmundial-adidas.jpg"
+            alt="Balones Mundialistas"
+            width="100%"
+          />
+        </figure>
+        <p>
+          Los balones mundialistas son los balones oficiales dentro en cada uno
+          de los partidos de Futbol que se disputan en los mundiales. <br />
+          Los mundiales se organizan cada 4 años y se celebran en diferentes
+          paises del todo el mundo. 🌐. <br /><br />
+          <b>LISTA DE LOS BALONES MUNDIALISTAS</b>
+        </p>
+        <div class="balones">
+          <ol>
+            <li>Tiento - 1930</li>
+            <li>Federale - 1934</li>
+            <li>Allen - 1938</li>
+            <li>Duplo T - 1950</li>
+            <li>Swiss World Champion - 1954</li>
+            <li>Top Star - 1958</li>
+            <li>Crack - 1962</li>
+            <li>Challenge 4 Star - 1966</li>
+            <li>Telstar - 1970</li>
+            <li>Telstar Durlast - 1974</li>
+            <li>Tango - 1978</li>
+            <li>Tango España - 1982</li>
+            <li>Azteca - 1986</li>
+            <li>Etrusco - 1990</li>
+            <li>Questra - 1994</li>
+            <li>Tricolore - 1998</li>
+            <li>Fevernova - 2002</li>
+            <li>Teamgeist - 2006</li>
+            <li>Jabulani - 2010</li>
+            <li>Brazuca - 2014</li>
+            <li>Telstar 18 - 2018</li>
+            <li>Al Rihla - 2022 ULTIMO BALON MUNDIALISTA</li>
+          </ol>
+          <a
+            href="https://www.fifa.com/es/tournaments/mens/worldcup/canadamexicousa2026/articles/todos-los-balones-de-la-historia-de-los-mundiales-pelotas-modelos-estilos"
+            target="_blank"
+            >VER MAS INFORMACIÓN</a>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
