--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style_index.css" />
-    <link
-      rel="shortcut icon"
-      href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon"href="https://i.pinimg.com/originals/f0/a7/28/f0a7285b524e23fb3c572d57200b02ec.png" type="image/x-icon"/>
     <title>Store Futbol</title>
   </head>
 
@@ -17,17 +13,21 @@
       <nav>
         <h1>BIENVENIDOS A LA TIENDA MUNDIAL DE FUTBOL SOCCER ⚽</h1>
         <a href="./pages/login.html">Log In</a>
-        <br />
+        <br/>
         <a href="./pages/signUp.html">Sign Up</a>
+        <br>
+        <a href="#playeras">Playeras 👕</a> <br>
+        <a href="#tenis">Taquetes 👟</a> <br>
+        <a href="#balones">Balones ⚽</a> <br>
       </nav>
       <hr />
-      <img src="./images/balls.jpg" alt="" width="600px" />
+      <img src="./images/balls.jpg" alt="" width="100%" />
       <br />
 
       <p>FUTBOL SOCCER</p>
       <hr />
 
-      <h2>PLAYERAS</h2>
+      <h2 id="playeras">PLAYERAS</h2>
       <!-- TABLAS -->
       <table border="2px">
         <tr>
@@ -102,7 +102,7 @@
         </figure>
       </div>
       <hr />
-      <h2>TAQUETES - TENIS</h2>
+      <h2 id="tenis">TAQUETES - TENIS</h2>
       <table border="2px">
         <tr>
           <th>TALLA</th>
@@ -145,7 +145,8 @@
         </figure>
       </div>
       <article>
-        <header><h3>BALONES MUNDIALISTAS</h3></header>
+        <hr>
+        <header><h3 id="balones">BALONES MUNDIALISTAS</h3></header>
         <figure>
           <img
             src="https://site.innovasport.com/cx/mundial/balon/Timeline/15-Todos/is-desk-lnd-timeline15-balonmundial-adidas.jpg"
@@ -187,10 +188,12 @@
           </ol>
           <a
             href="https://www.fifa.com/es/tournaments/mens/worldcup/canadamexicousa2026/articles/todos-los-balones-de-la-historia-de-los-mundiales-pelotas-modelos-estilos"
-            target="_blank"
-            >VER MAS INFORMACIÓN</a>
+            target="_blank">VER MAS INFORMACIÓN</a>
+            <br>
         </div>
       </article>
+      <hr>
     </main>
+    <footer><h4>Todos los derechos reservados ©2024 - Alan David Mendez Vazquez</h4></footer>
   </body>
 </html>
