HTML terminado e iniciacion de estilos

--- a/pages/login.html
+++ b/pages/login.html
@@ -56,7 +56,7 @@
               required
             />
           </div>
-          <br />
+          <br>
           <div>
             <input
               type="checkbox"
@@ -83,7 +83,10 @@
       </form>
     </main>
     <br>
-    <img src="../images/soccer-488700_1280.jpg" alt="Fondo Login" width="700px">
+    <figure>
+        <img src="../images/brazuca.jpg" alt="Fondo Login" width="100%">
+    </figure>
+    
     <hr>
     <footer>
       <h5>Todos los derechos reservados ©2024 - Alan David Mendez Vazquez</h5>
