--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -26,7 +26,8 @@
         </nav>
     </header>
     <!-- Main -->
-    <hr />
+    <hr>
+    <br>
     <main>
         <!-- Form -->
 
@@ -41,14 +42,14 @@
                 </div>
                 <br />
                 <div>
-                    <label for="Inemail">Gmail</label>
+                    <label for="Inemail">Gmail:</label>
                     <br />
                     <input type="email" name="Inemail" id="Inemail" placeholder="example@email.com" />
                 </div>
                 <br />
                 <div>
-                    <label for="Cname">Country name</label>
-                    <br />
+                    <label for="Cname">Country name:</label>
+                    
                     <!-- Line break -->
                     <select name="Cname" id="Cname">
                         <option value="mx">MÉXICO</option>
@@ -57,9 +58,8 @@
                         <option value="col">COLOMBIA</option>
                     </select>
                 </div>
-                <br />
                 <div>
-                    <p>Gender</p>
+                    <p>Gender:</p>
                     <input type="radio" name="gender" id="male" value="Male" />
                     <label for="male">Male</label>
                     <input type="radio" name="gender" id="female" value="Female" />
@@ -67,24 +67,28 @@
                     <input type="radio" name="gender" id="other" value="Other" />
                     <label for="other">Other</label>
                 </div>
-                <br />
+                <br>
                 <div>
                     <input type="checkbox" name="LegalPolicy" id="LegalPolicy" value="true" />
-                    <label for="LegalPolicy">Accept terms</label>
-                    <br />
+                    <label for="LegalPolicy">Aceptas Terminos y Condiciones</label>
+                    <br>
                     <input type="checkbox" name="reCorreos" id="reCorreos" value="true" />
-                    <label for="reCorreos">Accept</label>
+                    <label for="reCorreos">Aceptas el uso de datos</label>
                 </div>
-                <br />
+                <br>
                 <div>
                     <!-- <input type="submit" value="SignUp"> -->
-                    <button type="submit">Login</button>
+                    <button type="submit">Sign Up</button>
                 </div>
             </fieldset>
         </form>
+        <figure>
+            <img src="../images/otono_balon.jpg" alt="Otoño Balon" width="100%">
+        </figure>
     </main>
-    <hr />
-    <a href="../index.html">Return to Home</a>
+    <br>
+    <hr>
+    
 
     <footer>
         <h5>Todos los derechos reservados ©2024 - Alan David Mendez Vazquez</h5>
